[package]
name = "pcap_flow_splitter"
description = "A CLI utility that splits pcap files by flows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"

[dev-dependencies]
claim = "0.5.0"
rand = "0.8.5"
