[package]
name = "pcap_flow_splitter"
description = "A CLI utility that splits pcap files by flows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7"
base64 = "0.22"
thiserror = "1.0"

[dev-dependencies]
claim = "0.5"
rand = "0.9.0-alpha.2"
