[package]
name = "pcap_flow_splitter"
description = "A CLI utility that splits pcap files by flows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7"
base64 = "0.22"
clap = { version = "=4.5.11", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.28.2-alpha.0"

[dev-dependencies]
claim = "0.5"
rand = "0.9.0-alpha.2"
